--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<groupId>life.qbic</groupId>
-	<artifactId>travis-tests</artifactId>
+	<artifactId>travis-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Sample Portlet</name>
-	<url>http://github.com/qbicsoftware/travis-tests</url>
+	<url>http://github.com/qbicsoftware/travis-test</url>
 	<packaging>war</packaging>
 	<!-- we only need to tell maven where to find our parent pom and other QBiC dependencies -->
 	<repositories>
