--- a/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -1,4 +1,4 @@
-name=travis-tests
+name=travis-test
 module-group-id=life.qbic
 module-incremental-version=0.0.1-SNAPSHOT
 tags=Vaadin 7, QBiC, Big Data, Bioinformatics
