--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ notifications:
   email:
     on_success: never
     on_failure: never
-  slack: "$SLACK_TOKEN"
+  slack: 
+    rooms: "$SLACK_TOKEN"
     on_success: always
     on_failure: always
